// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shelf Component tests > Featured shelf 1`] = `
<div>
  <div
    class="_shelf_81910b"
  >
    <div
      class="TileSlider _slider_81910b"
    >
      <div
        class="TileSlider-leftControl"
      >
        <button
          aria-label="slide_previous"
          class="_chevron_81910b"
        >
          <svg
            aria-hidden="true"
            class="_icon_585b29"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </div>
      <div
        class="TileSlider-gestures"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <ul
          class="TileSlider-list"
          style="left: calc(-100%); transform: translateX(0%);"
        >
          <li
            aria-hidden="true"
            class="TileSlider--hidden"
            style="width: 100%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732 _featured_d75732 _disabled_d75732"
              data-testid="Last playlist item"
              href="/m/ddeeddee/last-playlist-item"
              role="button"
              tabindex="-1"
            >
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <h3
                    class="_title_d75732"
                  >
                    Last playlist item
                  </h3>
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      21 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            aria-hidden="false"
            class="TileSlider--visible"
            style="width: 100%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732 _featured_d75732"
              data-testid="Movie 1"
              href="/m/1234abcd/movie-1"
              role="button"
              tabindex="0"
            >
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <h3
                    class="_title_d75732"
                  >
                    Movie 1
                  </h3>
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      1 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            aria-hidden="true"
            class="TileSlider--hidden"
            style="width: 100%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732 _featured_d75732 _disabled_d75732"
              data-testid="Movie 2"
              href="/m/aaaaaaaa/movie-2"
              role="button"
              tabindex="-1"
            >
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <h3
                    class="_title_d75732"
                  >
                    Movie 2
                  </h3>
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      1 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
        </ul>
      </div>
      <div
        class="TileSlider-rightControl"
      >
        <button
          aria-label="slide_next"
          class="_chevron_81910b"
        >
          <svg
            aria-hidden="true"
            class="_icon_585b29"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
      <div
        aria-live="polite"
        class="hidden"
      >
        slide_indicator
      </div>
      <div
        aria-hidden="true"
        class="_dots_81910b"
      >
        <span
          class="_dot_81910b _active_81910b"
        />
        <span
          class="_dot_81910b"
        />
        <span
          class="_dot_81910b"
        />
        <span
          class="_dot_81910b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Shelf Component tests > Regular shelf 1`] = `
<div>
  <div
    class="_shelf_81910b"
  >
    <h2
      class="_title_81910b"
    >
      Test Shelf
    </h2>
    <div
      class="TileSlider _slider_81910b"
    >
      <div
        class="TileSlider-gestures"
        style="margin-left: -8px; margin-right: -8px;"
      >
        <ul
          class="TileSlider-list"
          style="left: calc(0%); transform: translateX(0%);"
        >
          <li
            aria-hidden="false"
            class="TileSlider--visible"
            style="width: 20%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732"
              data-testid="Movie 1"
              href="/m/1234abcd/movie-1"
              role="button"
              tabindex="0"
            >
              <div
                class="_titleContainer_d75732"
              >
                <h3
                  class="_title_d75732"
                >
                  Movie 1
                </h3>
              </div>
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      1 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            aria-hidden="false"
            class="TileSlider--visible"
            style="width: 20%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732"
              data-testid="Movie 2"
              href="/m/aaaaaaaa/movie-2"
              role="button"
              tabindex="0"
            >
              <div
                class="_titleContainer_d75732"
              >
                <h3
                  class="_title_d75732"
                >
                  Movie 2
                </h3>
              </div>
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      1 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            aria-hidden="false"
            class="TileSlider--visible"
            style="width: 20%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732"
              data-testid="Third movie"
              href="/m/12332123/third-movie"
              role="button"
              tabindex="0"
            >
              <div
                class="_titleContainer_d75732"
              >
                <h3
                  class="_title_d75732"
                >
                  Third movie
                </h3>
              </div>
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      1 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
          <li
            aria-hidden="false"
            class="TileSlider--visible"
            style="width: 20%; padding-left: 8px; padding-right: 8px;"
          >
            <a
              class="_card_d75732"
              data-testid="Last playlist item"
              href="/m/ddeeddee/last-playlist-item"
              role="button"
              tabindex="0"
            >
              <div
                class="_titleContainer_d75732"
              >
                <h3
                  class="_title_d75732"
                >
                  Last playlist item
                </h3>
              </div>
              <div
                class="_poster_d75732 _aspect169_d75732"
              >
                <div
                  class="_meta_d75732"
                >
                  <div
                    class="_tags_d75732"
                  >
                    <div
                      class="_tag_d75732"
                    >
                      21 common:abbreviation.minutes
                    </div>
                  </div>
                </div>
              </div>
            </a>
          </li>
        </ul>
      </div>
      <div
        aria-live="polite"
        class="hidden"
      >
        slide_indicator
      </div>
    </div>
  </div>
</div>
`;
